# tmpc

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_run_sim.sh  main.cpp
DecompUtil/: CMakeLists.txt
docs/: configuration_guide.md  fixed_window_size.md  model_adaptation_guide.md  non_guided_planner_explanation.md  tmpc_parallelization_implementation.md  visualization_controls.md  visualization_enhancements.md
guidance_planner/: CMakeLists.txt
guidance_planner/config/: params.yaml
guidance_planner/include/guidance_planner/: config.h  global_guidance.h  graph.h  sampler.h
guidance_planner/include/guidance_planner/types/: paths.h
guidance_planner/src/: config.cpp  cubic_spline.cpp  global_guidance.cpp  graph.cpp  prm.cpp  sampler.cpp
guidance_planner/src/homotopy_comparison/: homology.cpp  winding_angle.cpp
mpc_planner/: CMakeLists.txt
mpc_planner/include/mpc_planner/: planner.h
mpc_planner/src/: experiment_util.cpp  planner.cpp
mpc_planner_jackalsimulator/config/: settings.yaml
mpc_planner_modules/: CMakeLists.txt  modules.cmake
mpc_planner_modules/include/mpc_planner_modules/: decomp_constraints.h  guidance_constraints.h
mpc_planner_modules/src/: contouring.cpp  decomp_constraints.cpp  guidance_constraints.cpp
mpc_planner_solver/: CMakeLists.txt
mpc_planner_solver/Solver/include/: mpc_planner_generated.cpp  mpc_planner_generated.h
mpc_planner_solver/acados/Solver/: Makefile  Solver.json  acados_sim_solver_Solver.c  acados_solver_Solver.c  acados_solver_Solver.h
mpc_planner_solver/config/: solver_settings.yaml
mpc_planner_solver/include/mpc_planner_solver/: forces_solver_interface.h  model_detector.h  mpc_planner_parameters.h
mpc_planner_solver/src/: acados_solver_interface.cpp
mpc_planner_types/: CMakeLists.txt
mpc_planner_types/include/mpc_planner_types/: data_types.h  realtime_data.h
mpc_planner_types/src/: data_types.cpp
mpc_planner_util/: CMakeLists.txt  README.md
mpc_planner_util/include/mpc_planner_util/: visualization_dummy.h
mpc_planner_util/src/: data_visualization.cpp
ros_tools_no_ros/: CMakeLists.txt
ros_tools_no_ros/examples/: simple_example.cpp
ros_tools_no_ros/include/ros_tools/: logging.h  paths.h  visuals.h
ros_tools_no_ros/src/: profiling.cpp
ros_tools_no_ros/test/: test_spline.cpp
scenarios/: README.md  scenario_buttons.yaml  密集动态.json
